enhance index.html with structured layout and initial content for learning journal

--- a/index.html
+++ b/index.html
@@ -1,9 +1,70 @@
 <html>
-    <head>
-        <title>My Learning Journal</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <h1>index.html</h1>
-    </body>
+  <head>
+    <title>My Learning Journal</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <div id="header">
+      <div class="logo">
+        <img src="images/notebook-logo.png" alt="notebook logo" />
+        <span>My learning journal</span>
+      </div>
+
+      <nav id="nav">
+        <a href="#">home</a>
+        <a href="#">about me</a>
+      </nav>
+    </div>
+
+    <main>
+      <section id="hero">
+        <div class="hero-content">
+          <date>January 1, 2021</date>
+          <h1>My new journey as a web developer</h1>
+          <p>
+            After additional training, I am ready to take my skills to the next
+            level. I am excited to share my journey with you. Follow along as I
+            learn new technologies and build new projects.
+          </p>
+        </div>
+      </section>
+
+      <section id="posts">
+        <article>
+          <img class="blog-images" src="images/blog-one.jpg" alt="blog one" />
+          <date>January 1, 2021</date>
+          <h2>My first day of training</h2>
+          <p>
+            Today was my first day of training. I learned about HTML and CSS. I
+            am excited to learn more about web development.
+          </p>
+        </article>
+
+        <article>
+          <img class="blog-images" src="images/blog-two.jpg" alt="blog two" />
+          <date>January 2, 2021</date>
+          <h2>Learning about JavaScript</h2>
+          <p>
+            Today I learned about JavaScript. I learned how to create
+            interactive web pages. I am excited to learn more about JavaScript.
+          </p>
+        </article>
+
+        <article>
+          <img
+            class="blog-images"
+            src="images/blog-three.jpg"
+            alt="blog three"
+          />
+          <date>January 3, 2021</date>
+          <h2>Building my first project</h2>
+          <p>
+            Today I built my first project. I built a simple web page using HTML
+            and CSS. I am excited to build more projects.
+          </p>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
